--- a/.gitignore
+++ b/.gitignore
@@ -8,45 +8,41 @@
 /.bundle
 
 # Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-/db/*.sqlite3-*
+db/*.sqlite3
+db/*.sqlite3-journal
+db/*.sqlite3-*
 
 # Ignore all logfiles and tempfiles.
-/log/*
-/tmp/*
-!/log/.keep
-!/tmp/.keep
+log/*
+tmp/*
+!log/.keep
+!tmp/.keep
 
 # Ignore pidfiles, but keep the directory.
-/tmp/pids/*
+tmp/pids/*
 !/tmp/pids/
 !/tmp/pids/.keep
 
 # Ignore uploaded files in development.
-/storage/*
+storage/*
 !/storage/.keep
 
-/public/assets
+public/assets
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/public/uploads
-/public/packs
-/public/packs-test
-/node_modules
+public/uploads
+public/packs
+public/packs-test
+node_modules
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
 
 
-tmp/
-log/
-
-
-/app/assets/stylesheets/albums.scss
-/app/assets/stylesheets/home.scss
-/app/assets/stylesheets/photos.scss
-/app/assets/stylesheets/users.scss
+app/assets/stylesheets/albums.scss
+app/assets/stylesheets/home.scss
+app/assets/stylesheets/photos.scss
+app/assets/stylesheets/users.scss
